--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "date-fns": "4.1.0",
+    "framer-motion": "^11.11.17",
+    "geist": "^1.3.1",
+    "next": "15.1.6",
+    "next-themes": "^0.4.6",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwind-merge": "^3.3.1",
+    "zod": "3.25.67",
+    "class-variance-authority": "0.7.1",
+    "lucide-react": "0.544.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "@tailwindcss/postcss": "^4.1.9",
+    "@types/node": "^22",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8.5",
+    "tailwindcss": "^4.1.9",
+    "typescript": "^5"
   }
 }
