--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "^11.11.17",
     "geist": "^1.3.1",
+    "lucide-react": "0.544.0",
     "next": "15.1.6",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
     "tailwind-merge": "^3.3.1",
-    "zod": "3.25.67",
-    "class-variance-authority": "0.7.1",
-    "lucide-react": "0.544.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.35.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "typescript": "^5"
