--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "geist": "^1.3.1",
     "lucide-react": "0.544.0",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
